--- a/style.css
+++ b/style.css
@@ -9,7 +9,39 @@
   color: inherit;
 }
 
+body {
+  background-color: #303030;
+  color: #fff;
+}
+
 .scoreboard {
   display: flex;
   justify-content: center;
+}
+
+.options {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  margin-top: 1rem;
+}
+
+.option {
+  width: 128px;
+}
+
+.option:hover {
+  transform: scale(1.2);
+  border: 1px solid #fff;
+}
+
+.option:active {
+  transform: scale(1);
+}
+
+@media screen and (max-width: 600px) {
+  .options {
+    flex-direction: column;
+    align-items: center;
+  }
 }
