--- a/style.css
+++ b/style.css
@@ -43,6 +43,40 @@ body {
   transform: scale(1);
 }
 
+.scoreboard {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  border: 1px solid #fff;
+  width: 600px;
+  min-height: 100px;
+  max-height: 300px;
+  margin: 5rem auto 0 auto;
+  overflow-x: auto;
+}
+
+.scoreboard-item {
+  display: flex;
+  justify-content: center;
+  padding: 1rem;
+  height: fit-content;
+  border-bottom: 1px solid #fff;
+}
+
+.scoreboard-item:nth-child(-n+3) {
+  background-color: #404040;
+  border-bottom: 1px solid #fff !important;
+}
+
+.scoreboard-item:nth-last-child(-n+3) {
+  border-bottom: none;
+}
+
+.scoreboard-item:nth-child(3n - 1) {
+  border-left: 1px solid #fff;
+  border-right: 1px solid #fff;
+}
+
+
 @media screen and (max-width: 600px) {
   .options {
     flex-direction: column;
