Player won games now have green background and lost games have red background

--- a/style.css
+++ b/style.css
@@ -76,6 +76,14 @@ body {
   border-right: 1px solid #fff;
 }
 
+.game-won {
+  background-color: #63a061;
+}
+
+.game-lost {
+  background-color: #a06161;
+}
+
 
 @media screen and (max-width: 600px) {
   .options {
